Fix location icon alignment on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -196,13 +196,22 @@ align-items: center;
   
 }
 
-.location-icon .fa-solid{
-    background-color:rgb(236, 230, 230);
-     padding: 16px;
-      border-radius: 15px 0 0 15px;
-      color: black;
-      }
+.location-icon {
+    width: 50px;
+    height: 50px;
+    background-color: #F2F2F2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px 0 0 15px;
+    flex-shrink: 0;
+}
 
+.location-icon .fa-solid {
+    color: black;
+    padding: 0;
+    background: none;
+}
 .main-container {
     width: 100%;
     max-width: 1440px;
@@ -563,6 +572,18 @@ margin-left: 20px;
     color: #0065FC;
     flex-shrink: 0;
 }
+
+.location-icon {
+    width: 50px;
+    height: 50px;
+    background-color: #F2F2F2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px 0 0 15px;
+    box-sizing: border-box;
+}
+
 .recherche-form {
     display: flex;
       width: 100%;
